修复了若干bug，这次是真能运行了