@@ -186,7 +186,7 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
-                    <fork>true</fork>
+                    <fork>false</fork>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
@@ -205,7 +205,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.javascene.gradingfx/com.javascene.gradingfx.HelloApplication</mainClass>
+                            <mainClass>com.javascene.gradingfx.Launcher</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
@@ -216,19 +216,7 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.5</version>
-                <configuration>
-                    <argLine>
-                        --add-opens com.javascene.gradingfx/com.javascene.gradingfx.model=ALL-UNNAMED
-                        --add-opens com.javascene.gradingfx/com.javascene.gradingfx.util=ALL-UNNAMED
-                        --add-opens com.javascene.gradingfx/com.javascene.gradingfx.service=ALL-UNNAMED
-                        --add-reads com.javascene.gradingfx=ALL-UNNAMED
-                    </argLine>
-                </configuration>
-            </plugin>
+            
         </plugins>
     </build>
 </project>
